adjust index page, create structure, and apply background css styling to each page

--- a/index.html
+++ b/index.html
@@ -3,20 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Coding portfolio for Christian Asimou">
     <title>Christian Asimou - Coding Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="gradient-background">
     <header>
-        <!-- Add your header content here -->
+        <h1>Christian Asimou</h1>
+        <nav>
+            <ul>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="./skills.html">Skills</a></li>
+                <li><a href="./about.html">About Me</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-
+        
     <main>
-        <h1>test</h1>
+        <section id="intro">
+            <h2>Welcome to My Coding Portfolio</h2>
+        </section>
+
+        <section id="profile-summary">
+            <h2>Profile Summary</h2>
+            <p>I am currently a Master of Finance student studying finance at the Weatherhead School of Management,
+                     apart of Case Western Reserve University in Cleveland, Ohio.</p>
+        </section>
+
+        <section id="featured-projects">
+            <h2>Featured Projects</h2>
+            
+
+
+        </section>
     </main>
 
     <footer>
-        <!-- Add your footer content here -->
+        <p>&copy; Christian Asimou. All rights reserved. </p>
     </footer>
 </body>
 </html>
