--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christian Asimou - Coding Portfolio</title>
+    <title>Christian Asimou - Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="gradient-background">
     <header>
         <!-- Add your header content here -->
     </header>
