improve structure of homepage

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Christian Asimou</h1>
         <nav>
             <ul>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./skills.html">Skills</a></li>
                 <li><a href="./about.html">About Me</a></li>
@@ -27,12 +28,43 @@
 
         <section id="profile-summary">
             <h2>Profile Summary</h2>
-            <p>I am currently a Master of Finance student studying finance at the Weatherhead School of Management,
-                     apart of Case Western Reserve University in Cleveland, Ohio.</p>
+            <p>I am currently a Master of Finance student at the Weatherhead School of Management,
+                apart of Case Western Reserve University in Cleveland, Ohio. I'm planning to focus my degree in either Fintech or Big Data Analytics. For a future career,
+                 I am most intrigued in applying how computer science concepts can be applied to finance.</p>
         </section>
 
         <section id="featured-projects">
             <h2>Featured Projects</h2>
+            <article>
+                <h3>Employee Directory Manager</h3>
+                <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
+            <ul>
+                <li>Programmed in C</li>
+                <li>Demonstrated knowledge of Dynamic Memory Allocation</li>
+                <li>Handling Hash Tables</li>
+            </ul>
+
+            </article>
+            <article>
+                <h3>Employee Directory Manager</h3>
+                <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
+            <ul>
+                <li>Programmed in C</li>
+                <li>Demonstrated knowledge of Dynamic Memory Allocation</li>
+                <li>Handling Hash Tables</li>
+            </ul>
+
+            </article>
+            <article>
+                <h3>Employee Directory Manager</h3>
+                <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
+            <ul>
+                <li>Programmed in C</li>
+                <li>Demonstrated knowledge of Dynamic Memory Allocation</li>
+                <li>Handling Hash Tables</li>
+            </ul>
+
+            </article>
             
 
 
@@ -41,6 +73,7 @@
 
     <footer>
         <p>&copy; Christian Asimou. All rights reserved. </p>
+        <a href="https://www.linkedin.com/in/christian-asimou/">Connect on LinkedIn</a>
     </footer>
 </body>
 </html>
