add structure to project page, do some CSS styling, and improve homepage structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="gradient-background">
     <header>
         <h1>Christian Asimou</h1>
-        <nav>
+        <nav class="links">
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./projects.html">Projects</a></li>
@@ -24,51 +24,21 @@
     <main>
         <section id="intro">
             <h2>Welcome to My Coding Portfolio</h2>
-        </section>
-
-        <section id="profile-summary">
-            <h2>Profile Summary</h2>
             <p>I am currently a Master of Finance student at the Weatherhead School of Management,
                 apart of Case Western Reserve University in Cleveland, Ohio. I'm planning to focus my degree in either Fintech or Big Data Analytics. For a future career,
-                 I am most intrigued in applying how computer science concepts can be applied to finance.</p>
-        </section>
-
-        <section id="featured-projects">
-            <h2>Featured Projects</h2>
-            <article>
-                <h3>Employee Directory Manager</h3>
-                <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
-            <ul>
-                <li>Programmed in C</li>
-                <li>Demonstrated knowledge of Dynamic Memory Allocation</li>
-                <li>Handling Hash Tables</li>
-            </ul>
-
-            </article>
-            <article>
-                <h3>Employee Directory Manager</h3>
-                <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
-            <ul>
-                <li>Programmed in C</li>
-                <li>Demonstrated knowledge of Dynamic Memory Allocation</li>
-                <li>Handling Hash Tables</li>
-            </ul>
-
-            </article>
-            <article>
-                <h3>Employee Directory Manager</h3>
-                <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
-            <ul>
-                <li>Programmed in C</li>
-                <li>Demonstrated knowledge of Dynamic Memory Allocation</li>
-                <li>Handling Hash Tables</li>
-            </ul>
-
-            </article>
-            
-
+                 I am most intrigued in how computer science concepts can be applied to finance.</p>
 
         </section>
+
+        <section id="skills">
+            <h3>Core Skills</h3>
+            <ul>
+                <li>Microsoft Excel</li>
+                <li>Python Programming</li>
+                <li>Intermediate C Programming</li>
+                <li>Data Structures</li>
+            </ul>
+             </section>
     </main>
 
     <footer>
