--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,42 @@
     </header>
 
     <main>
-        <h1>test</h1>
+        <section id="projects">
+            <h2>Projects</h2>
+            <article>
+                <h3>Employee Directory Manager</h3>
+                <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
+            <ul>
+                <li>Programmed in C</li>
+                <li>Demonstrated knowledge of Dynamic Memory Allocation</li>
+                <li>Handling Hash Tables</li>
+            </ul>
+
+            </article>
+            <article>
+                <h3>Employee Directory Manager</h3>
+                <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
+            <ul>
+                <li>Programmed in C</li>
+                <li>Demonstrated knowledge of Dynamic Memory Allocation</li>
+                <li>Handling Hash Tables</li>
+            </ul>
+
+            </article>
+            <article>
+                <h3>Employee Directory Manager</h3>
+                <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
+            <ul>
+                <li>Programmed in C</li>
+                <li>Demonstrated knowledge of Dynamic Memory Allocation</li>
+                <li>Handling Hash Tables</li>
+            </ul>
+
+            </article>
+            
+
+
+        </section>
     </main>
 
     <footer>
