beautify links and move them to top right, add and beautify footer

--- a/projects.html
+++ b/projects.html
@@ -8,12 +8,20 @@
 </head>
 <body class="gradient-background">
     <header>
-        <!-- Add your header content here -->
+        <h1>Projects</h1>
+        <nav class="links">
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="./skills.html">Skills</a></li>
+                <li><a href="./about.html">About Me</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
         <section id="projects">
-            <h2>Projects</h2>
             <article>
                 <h3>Employee Directory Manager</h3>
                 <p>This project takes sample employee data from a CSV file and loads it into a hash table. The user can manipulate the has table with a simple user interface.</p>
@@ -51,7 +59,8 @@
     </main>
 
     <footer>
-        <!-- Add your footer content here -->
+        <p>&copy; Christian Asimou. All rights reserved. </p>
+        <a href="https://www.linkedin.com/in/christian-asimou/">Connect on LinkedIn</a>
     </footer>
 </body>
 </html>
