add cards to homepage

--- a/index.html
+++ b/index.html
@@ -32,13 +32,42 @@
 
         <section id="skills">
             <h3>Core Skills</h3>
-            <ul>
-                <li>Microsoft Excel</li>
-                <li>Python Programming</li>
-                <li>Intermediate C Programming</li>
-                <li>Data Structures</li>
-            </ul>
-             </section>
+            <div class="skillgrid">
+                <div class="skillcard">
+                    <h4>Microsoft Excel</h4>
+                    <div class="skill-level">
+                        <div class="skill-bar" style="width: 90%;"></div>
+                    </div>
+                    <ul>
+                        <li>Advanced Formulas</li>
+                        <li>PivotTables</li>
+                        <li>Visualization</li>
+                    </ul>>
+                </div>
+                <div class="skillcard">
+                    <h4>Python Programming</h4>
+                    <div class="skill-level">
+                        <div class="skill-bar" style="width: 90%;"></div>
+                    </div>
+                    <ul>
+                        <li>Data analysis</li>
+                        <li>API Integration</li>
+                        <li>Flask</li>
+                    </ul>>
+                </div>    
+                <div class="skillcard">
+                    <h4>Intermediate C Programming</h4>
+                    <div class="skill-level">
+                        <div class="skill-bar" style="width: 90%;"></div>
+                    </div>
+                    <ul>
+                        <li>Linked Lists</li>
+                        <li>Chaining with Hash Tables</li>
+                        <li>Dynamic Memory Allocation</li>
+                    </ul>>
+                </div>     
+            </div>
+        </section>
     </main>
 
     <footer>
