--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3>Core Skills</h3>
             <div class="skillgrid">
                 <div class="skillcard">
-                    <h4>Microsoft Excel</h4>
+                    <h4>Microsoft Excel Usage</h4>
                     <div class="skill-level">
                         <div class="skill-bar" style="width: 90%;"></div>
                     </div>
@@ -42,7 +42,7 @@
                         <li>Advanced Formulas</li>
                         <li>PivotTables</li>
                         <li>Visualization</li>
-                    </ul>>
+                    </ul>
                 </div>
                 <div class="skillcard">
                     <h4>Python Programming</h4>
@@ -53,7 +53,7 @@
                         <li>Data analysis</li>
                         <li>API Integration</li>
                         <li>Flask</li>
-                    </ul>>
+                    </ul>
                 </div>    
                 <div class="skillcard">
                     <h4>Intermediate C Programming</h4>
@@ -61,10 +61,10 @@
                         <div class="skill-bar" style="width: 90%;"></div>
                     </div>
                     <ul>
-                        <li>Linked Lists</li>
+                        <li>Data Structures</li>
                         <li>Chaining with Hash Tables</li>
                         <li>Dynamic Memory Allocation</li>
-                    </ul>>
+                    </ul>
                 </div>     
             </div>
         </section>
