plan to redo homepage and get rid of skills and contact page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./projects.html">Projects</a></li>
-                <li><a href="./skills.html">Skills</a></li>
                 <li><a href="./about.html">About Me</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -50,7 +49,7 @@
                         <div class="skill-bar" style="width: 90%;"></div>
                     </div>
                     <ul>
-                        <li>Data analysis</li>
+                        <li>Data Analysis</li>
                         <li>API Integration</li>
                         <li>Flask</li>
                     </ul>
