--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Christian Asimou - Coding Portfolio</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 <body class="gradient-background">
     <header>
