--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <footer class="foot">
         <p>&copy; Christian Asimou. All rights reserved. </p>
-        <a href="https://www.linkedin.com/in/christian-asimou/">Connect on LinkedIn</a>
+        <p><a href="https://www.linkedin.com/in/christian-asimou/">Connect on LinkedIn</a></p>
     </footer>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
