implement links to email and linkedin

--- a/about.html
+++ b/about.html
@@ -22,50 +22,21 @@
         
     <main>
         <section id="intro">
-            <h2>Welcome to My Coding Portfolio</h2>
+            <h2>About Me</h2>
             <p>I am currently a Master of Finance student at the Weatherhead School of Management,
                 apart of Case Western Reserve University in Cleveland, Ohio. I'm planning to focus my degree in either Fintech or Big Data Analytics. For a future career,
                  I am most intrigued in how computer science concepts can be applied to finance.</p>
 
         </section>
 
-        <section id="skills">
-            <h3>Core Skills</h3>
-            <div class="skillgrid">
-                <div class="skillcard">
-                    <h4>Microsoft Excel Usage</h4>
-                    <div class="skill-level">
-                        <div class="skill-bar" style="width: 90%;"></div>
-                    </div>
-                    <ul>
-                        <li>Advanced Formulas</li>
-                        <li>PivotTables</li>
-                        <li>Visualization</li>
-                    </ul>
-                </div>
-                <div class="skillcard">
-                    <h4>Python Programming</h4>
-                    <div class="skill-level">
-                        <div class="skill-bar" style="width: 90%;"></div>
-                    </div>
-                    <ul>
-                        <li>Data Analysis</li>
-                        <li>API Integration</li>
-                        <li>Flask</li>
-                    </ul>
-                </div>    
-                <div class="skillcard">
-                    <h4>Intermediate C Programming</h4>
-                    <div class="skill-level">
-                        <div class="skill-bar" style="width: 90%;"></div>
-                    </div>
-                    <ul>
-                        <li>Data Structures</li>
-                        <li>Chaining with Hash Tables</li>
-                        <li>Dynamic Memory Allocation</li>
-                    </ul>
-                </div>     
-            </div>
+        <section id="contact">
+            <h3>Contact Me</h3>
+            <ul>
+                <li>School email: <a href=""mailto:cda54@case.edu?subject=Hello&body=I%20saw%20your%20website%20and%20wanted%20to%20reach%20out."">cda54@case.edu</a></li>
+                <li>Personal email: <a href=""mailto:chrisda28@gmail.com?subject=Hello&body=I%20saw%20your%20website%20and%20wanted%20to%20reach%20out."">chrisda28@gmail.com</a></li>
+                <li><a href="https://www.linkedin.com/in/christian-asimou/">https://www.linkedin.com/in/christian-asimou/</a></li>
+            </ul>
+            
         </section>
     </main>
 
