--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 </head>
 <body class="gradient-background">
     <header>
-        <h1>Christian Asimou</h1>
+        <h1>Projects</h1>
         <nav class="links">
             <ul>
                 <li><a class="btn btn-light" href="./index.html" role="button">Home</a></li>
