fix email links

--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
         <section id="contact">
             <h3>Contact Me</h3>
             <ul>
-                <li>School email: <a href=""mailto:cda54@case.edu?subject=Hello&body=I%20saw%20your%20website%20and%20wanted%20to%20reach%20out."">cda54@case.edu</a></li>
-                <li>Personal email: <a href=""mailto:chrisda28@gmail.com?subject=Hello&body=I%20saw%20your%20website%20and%20wanted%20to%20reach%20out."">chrisda28@gmail.com</a></li>
+                <li>School email: <a href="mailto:cda54@case.edu?subject=Hello&body=I%20saw%20your%20website%20and%20wanted%20to%20reach%20out.">cda54@case.edu</a></li>
+                <li>Personal email: <a href="mailto:chrisda28@gmail.com?subject=Hello&body=I%20saw%20your%20website%20and%20wanted%20to%20reach%20out.">chrisda28@gmail.com</a></li>
                 <li><a href="https://www.linkedin.com/in/christian-asimou/">https://www.linkedin.com/in/christian-asimou/</a></li>
             </ul>
             
