make bullet points for project descriptions and improve spacing between bullets

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                     <div class="skill-level">
                         <div class="skill-bar" style="width: 90%;"></div>
                     </div>
-                    <p>This C program loads sample csv data into a hash table and then allows the user
+                    <p>This C program loads sample employee csv data into a hash table and then allows the user
                         to find an employee, delete an employee, or print out all employees.
                          The user will navigate a basic interface, allowing them to work with the program.</p>
                     <ul class="projfeatures">
@@ -49,18 +49,17 @@
                     </div>
                     <p>Python scripts make API call to get historical time series data for JPMorgan, 
                         Bank of America, Goldman Sachs, and Citigroup for the past 20 years.
-                         The data is formatted and analyzed with Pandas and used to make visualization
+                         The data is formatted and analyzed with Pandas and used to make visualizations
                           with Seaborn that are rendered in Flask. For JPMorgan specifically,
-                           using scikit-learn the program entails a basic linear regression model
+                           using scikit-learn, the program entails a basic linear regression model
                             to predict the daily return (price change as a percentage) for the next day.</p>
-                    <ul>
+                    <ul class="projfeatures">
                         <li>Languages: Python, HTML, CSS</li>
-                        <li>Calculate metrics such as correlation, standard deviation, 20-day moving average price
-                            , and implement a linear regression model.</li>
+                        <li>Calculate metrics such as correlation, standard deviation, 20-day moving average price, and implement a linear regression model.</li>
                         <li>Show the calculated metrics with data visualizations in a Flask web application</li>
                         <li>Provide commentary in Flask app explaining visualization and news sources cited</li>
                         <li>Linear regression model predicts next day's daily return using most current data</li>
-                        <li>Technologies Used: Flask, Pandas, Scikit-learn, AlphaVantage API, Seaborn, Bootstrap</li>
+                        <li>Technologies Used: Flask, Pandas, Scikit-learn, AlphaVantage API, Seaborn, Bootstrap (front-end kit)</li>
                         <li><a href="https://github.com/chrisda28/stockanalyzer">View Repository on Github</a></li>
                     </ul>
                 </div>    
