add another project (fed meeting minutes sentiment project

--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,26 @@
                         <li>Technologies Used: Flask, Pandas, Scikit-learn, AlphaVantage API, Seaborn, Bootstrap (front-end kit)</li>
                         <li><a href="https://github.com/chrisda28/stockanalyzer">View Repository on Github</a></li>
                     </ul>
+                </div>
+                <div class="skillcard">
+                    <h4>Fed Meeting Minutes Sentiment Analysis</h4>
+                    <div class="skill-level">
+                        <div class="skill-bar" style="width: 90%;"></div>
+                    </div>
+                    <p>Scrapes and analyzes Federal Reserve meeting minutes articles for the past two years,
+                         including the current year. It uses a pretrained financial text model (ProsusAI/finBERT)
+                          to analyze sentiment (positive, negative, or neutral) and basic functionality to count specific keywords in the articles. 
+                          The results are visualized through various plots and a basic user interface in the Python console.</p>
+                    <ul class="projfeatures">
+                        <li>Scrapes Federal Reserve meeting minutes articles for the past two years</li>
+                        <li>Analyzes sentiment of articles using a pretrained financial text model</li>
+                        <li>Counts occurrences of specific keywords in the articles</li>
+                        <li>Shows heatmap of keyword count spanning all scraped articles</li>
+                        <li>Sentiment trend plot across all articles</li>
+                        <li>Technologies Used: Pandas, Pytorch, Matplotlib, Seaborn, BeautifulSoup</li>
+                        <li><a href="https://github.com/chrisda28/fed_minutes_sentiment">View Repository on Github</a></li>
+
+                    </ul>
                 </div>    
             </div>
         </section>
